k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: node:20
          command: ["sh", "-c", "cd /app && npm install && npm start"]
          volumeMounts:
            - name: backend-volume
              mountPath: /app
      volumes:
        - name: backend-volume
          hostPath:
            path: /run/desktop/mnt/host/c/Users/Amine/Desktop/devo/full_stack_js_project_errorlist_4twin5_2026/backend
