k8s/supplier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplier-service
  namespace: bmp-app
spec:
  selector:
    app: supplier
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
